--- a/MobileTsar/MobileTsar.WinPhone/packages.config
+++ b/MobileTsar/MobileTsar.WinPhone/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wpa81" />
   <package id="Plugin.Fingerprint" version="1.4.5" targetFramework="wpa81" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.267" targetFramework="wpa81" />
