--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -4,12 +4,13 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="DHTMLX.Scheduler.MVC3.Sample" version="1.0.3" targetFramework="net452" />
   <package id="DHTMLX.Scheduler.NET" version="3.4.0.1" targetFramework="net452" />
+  <package id="EFCodeFirst" version="0.8" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -41,12 +42,14 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MvcScaffolding" version="1.0.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
+  <package id="T4Scaffolding" version="0.8.0" targetFramework="net452" />
   <package id="Twilio" version="5.6.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
