--- a/MobileTsar/MobileTsar.Windows/packages.config
+++ b/MobileTsar/MobileTsar.Windows/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="win81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="win81" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="win81" />
   <package id="Plugin.Fingerprint" version="1.4.5" targetFramework="win81" />
+  <package id="SignaturePad.Xamarin.Forms.PCL" version="1.0.0.1" targetFramework="win81" />
   <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="win81" />
   <package id="Xamarin.Forms" version="2.3.4.267" targetFramework="win81" />
 </packages>
