--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SendMailerController.cs" />
+    <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Controllers\TicketsController.cs" />
     <Compile Include="Controllers\TimeSheetHistoryController.cs" />
     <Compile Include="Controllers\TimesheetsController.cs" />
@@ -310,6 +311,7 @@
     <Compile Include="Models\RolesView.cs" />
     <Compile Include="Models\SchedulerModel.cs" />
     <Compile Include="Models\Subscription.cs" />
+    <Compile Include="Models\Tasks.cs" />
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Models\Timesheet.cs" />
     <Compile Include="Models\Travel.cs" />
@@ -334,6 +336,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Gridmvc.css" />
     <Content Include="Content\jquery-ui-1.10.4.custom.min.css" />
+    <Content Include="Content\kanban.css" />
+    <Content Include="Content\themes\base\kanban.css" />
     <Content Include="css\agency.css" />
     <Content Include="css\agency.min.css">
       <DependentUpon>agency.css</DependentUpon>
@@ -835,6 +839,12 @@
     <Content Include="Views\ClientPasswords\Details.cshtml" />
     <Content Include="Views\ClientPasswords\Edit.cshtml" />
     <Content Include="Views\ClientPasswords\Index.cshtml" />
+    <Content Include="Views\Tasks\Create.cshtml" />
+    <Content Include="Views\Tasks\Delete.cshtml" />
+    <Content Include="Views\Tasks\Details.cshtml" />
+    <Content Include="Views\Tasks\Edit.cshtml" />
+    <Content Include="Views\Tasks\Index.cshtml" />
+    <Content Include="Views\Tasks\ViewTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
